# otqa

./: Cargo.toml  README.md
src/: lib.rs
src/resources/: celebrities.txt  general.txt  history.txt  humanities.txt  literature.txt  movies.txt  people.txt  science-technology.txt  sports.txt  video-games.txt  world.txt
