[package]
name = "otqa"
description = "A simple, no-API wrapper around the OpenTriviaQA database"
version = "1.0.2"
edition = "2021"
repository = "https://github.com/Siliwolf/otqa"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
